feat: discover a class-level main runnable for the run gutter
Give a main class a run affordance on its class declaration, not only on the
main method -- the IntelliJ-style gutter where the class line and the main line
both offer to run. Discovery is the authoritative source of the class range, so
this is done server-side; the client renders and launches it.

Server:
- RunnableKind: append MAIN_CLASS (ordinal 4). It must be appended, never
  inserted: lsp4j serializes the enum by ordinal and the clients (lathe.run,
  lathe.neotest, explore.py) key off ordinals 0-3, so a new value takes the next
  ordinal to keep existing wire values stable. Unknown ordinals are already
  ignored by the neotest adapter.
- RunnableScanner: track classesWithMain (mirror of classesWithTests) and, when a
  class contains a main, emit a MAIN_CLASS target ranged over the class
  declaration, with id == fqcn and parentId == enclosing/package -- the same
  linkage TEST_CLASS has with TEST_METHOD, so a client can pair the method
  target (parentId == fqcn) with its class. No package target: that grouping is
  test-only. Collapse the now-identical class-target factories into one
  classLevelTarget(..., kind).

Client:
- run.lua: place the run sign on both MAIN and MAIN_CLASS (class line + method
  line). _main_target_for still returns a MAIN method target for launch, but now
  resolves a cursor inside a MAIN_CLASS range to that class's method (its id is
  the method's parentId), so :LatheRun works from the class line too, even with
  several mains in one file. The enclosing class range contains the method range,
  so the method match takes precedence when the cursor is on the method line.
- explore.py: list MAIN_CLASS and run it (kind 4 -> the target id is the fqcn).
- neotest.lua: comment only -- it still excludes all MAIN-family kinds (a main is
  not a test).

Tests:
- RunnableScannerTest: a main class yields MAIN + MAIN_CLASS with the class range
  above the method and the parent linkage; 